<resources>
    <string name="app_name">Ptt</string>

    <string name="unselected_article_hint">Select an article from</string>

    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="back_exit_confirm">Back Again To Exit</string>
    <string name="article_search_option_hint">Keyword</string>
    <string name="article_search_option_title">Title</string>
    <string name="article_search_option_author">Author</string>
    <string name="article_search_option_push">Push</string>
    <string name="article_blacklist_hint">Blacklist</string>
    <string name="poll_interval_hint">Poll Interval (sec)</string>
    <string name="blacklist_add">Add Blacklist</string>
    <string name="update_blacklist_success">Update Successfully</string>
    <string name="blacklist_cancel">Cancel</string>
    <string name="same_title">Same Title</string>
    <string name="same_author">Same Author</string>
    <string name="update_blacklist">Update</string>
    <string name="load_new_push">Load New Push</string>
    <string name="loading_new_push">Loading…</string>
    <string name="poll_start">Start</string>
    <string name="poll_cancel">Cancel</string>
    <string name="poll_start_hint">Poll Interval : </string>

    <string name="login_feature">Login with google account can sync all your favorites and blacklist
    data across your different devices.</string>
    <string name="no_fav_hint">You don\'t have any favorite board yet.\nSync data with your google account or add it manually</string>

</resources>
